Working on fact table

--- a/src/com/jetsonfuzz/java/gui/FactTablePanel.form
+++ b/src/com/jetsonfuzz/java/gui/FactTablePanel.form
@@ -82,7 +82,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblTableName" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <Component id="txtFactName" max="32767" attributes="0"/>
@@ -95,7 +95,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblTableName" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="txtFactName" min="-2" max="-2" attributes="0"/>
                   <EmptySpace pref="15" max="32767" attributes="0"/>
@@ -104,7 +104,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jLabel1">
+        <Component class="javax.swing.JLabel" name="lblTableName">
           <Properties>
             <Property name="text" type="java.lang.String" value="Fact Table Name:"/>
           </Properties>
@@ -481,6 +481,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Remove Non-Key"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRemoveAttrActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
