--- a/src/com/jetsonfuzz/java/gui/Launcher.form
+++ b/src/com/jetsonfuzz/java/gui/Launcher.form
@@ -27,21 +27,20 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel1" pref="483" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="linkConnect" alignment="0" min="-2" pref="401" max="-2" attributes="0"/>
+                          <Component id="linkInitialize" alignment="0" min="-2" pref="401" max="-2" attributes="0"/>
+                          <Component id="linkDimensional" alignment="0" min="-2" pref="401" max="-2" attributes="0"/>
+                          <Component id="linkFactTable" alignment="0" min="-2" pref="401" max="-2" attributes="0"/>
+                          <Component id="linkReview" alignment="0" min="-2" pref="401" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="0" pref="57" max="32767" attributes="0"/>
+                  </Group>
+                  <Component id="jLabel1" alignment="1" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      <Component id="btnQuit" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="linkInitialize" alignment="0" min="-2" pref="401" max="-2" attributes="0"/>
-                          <Component id="linkFactTable" alignment="0" min="-2" pref="401" max="-2" attributes="0"/>
-                          <Component id="linkDimensional" alignment="0" min="-2" pref="401" max="-2" attributes="0"/>
-                          <Component id="linkReview" alignment="0" min="-2" pref="401" max="-2" attributes="0"/>
-                          <Component id="linkExecute" alignment="0" min="-2" pref="401" max="-2" attributes="0"/>
-                          <Component id="linkConnect" alignment="0" min="-2" pref="401" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="0" pref="82" max="32767" attributes="0"/>
+                      <Component id="btnQuit" min="-2" pref="119" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -50,10 +49,10 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="linkConnect" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="linkInitialize" min="-2" max="-2" attributes="0"/>
@@ -63,11 +62,9 @@
               <Component id="linkFactTable" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="linkReview" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="linkExecute" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="28" max="32767" attributes="0"/>
-              <Component id="btnQuit" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+              <Component id="btnQuit" min="-2" pref="45" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -138,16 +135,6 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="linkReviewActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="com.jetsonfuzz.java.gui.common.JLinkButton" name="linkExecute">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="6.  Execute operations"/>
-        <Property name="focusable" type="boolean" value="false"/>
-        <Property name="horizontalAlignment" type="int" value="2"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="linkExecuteActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
