--- a/src/com/jetsonfuzz/java/gui/ReviewPanel.form
+++ b/src/com/jetsonfuzz/java/gui/ReviewPanel.form
@@ -46,16 +46,16 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" pref="629" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" pref="734" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane1" pref="475" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
