Updating review operations screen

--- a/src/com/jetsonfuzz/java/gui/DimTablePanel.form
+++ b/src/com/jetsonfuzz/java/gui/DimTablePanel.form
@@ -490,19 +490,14 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnViewSQL" pref="130" max="32767" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="btnSaveCustomTable" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="175" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="btnViewSQL" max="32767" attributes="0"/>
-                      <Component id="btnSaveCustomTable" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="btnViewSQL" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -515,14 +510,6 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnViewSQLActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JButton" name="btnSaveCustomTable">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Save Custom Table"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSaveCustomTableActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
